# agent-orchestrator

./: CLAUDE.md  Cargo.toml  agent-orchestrator.service  deploy.sh  run-tests.sh
.github/workflows/: ci.yml
prompts/: architect.md  auditor.md  developer.md  manager.md  merger.md  scorer.md
src/: agent.rs  architect_client.rs  bus_tools.rs  config.rs  control.rs  daemon.rs  dispatch.rs  lib.rs  main.rs  mcp.rs  mcp_tasks.rs  relay.rs  resume.rs  runtime.rs  runtime_support.rs  task_tools.rs  watcher.rs  worktree.rs
src/backend/: claude.rs  claudius.rs  mod.rs
src/runtime/: retry_budget.rs
src/transport/: message.rs  mod.rs  unix.rs
src/types/: agent.rs
tests/: e2e.rs  integration_tests.rs  test_config.toml  unit_tests.rs
tests/support/: mod.rs  test_scenario.rs
