[package]
name = "agent-orchestrator"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Multi-agent orchestration system for AI coding assistants"
repository = "https://github.com/Osso/agent-orchestrator"

[dependencies]
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "0.9", features = ["server", "transport-io"] }
schemars = "1"

peercred-ipc = { git = "https://github.com/Osso/peercred-ipc.git" }
llm-sdk = { git = "https://github.com/Osso/llm-sdk.git" }
agent-bus = { git = "https://github.com/Osso/agent-bus.git" }
llm-tasks = { git = "https://github.com/Osso/llm-tasks.git" }
claude-architect = { path = "../claude-architect" }
dirs = "6"
toml = "0.8"
dotenvy = "0.15.7"

[dev-dependencies]
glob = "0.3.3"

[patch."https://github.com/Osso/llm-sdk.git"]
llm-sdk = { path = "../../lib/llm-sdk" }

[patch."https://github.com/Osso/llm-tasks.git"]
llm-tasks = { path = "../llm-tasks" }

[patch."https://github.com/Osso/peercred-ipc.git"]
peercred-ipc = { path = "../../lib/peercred-ipc" }
